# brown-basketball

./: Makefile  Makefile.am  README.md  Session.vim  brown-basketball.2023-09-07.conf  brown-basketball.conf  brown-basketball.new.conf  brown-basketball.old.conf  configure.ac  debug_output.txt  vim_macro_database_format.txt  vim_macro_format_database.txt
brown-basketball.conf/: 2023-10-15  2024-04-24
database/: 2024-08-02  2024-08-05  2024-10-05  2025-04-18  2025-08-28  2025-09-30  2025-10-18
include/: analysis.hpp  analysis1.hpp  analysis2.hpp  common.hpp  database.hpp  define_enum_flag_operators.hpp  generation.hpp  misc.hpp  my_random.hpp  player.hpp  printing.hpp  random.hpp  scoring.hpp  settings.hpp  standard_deviation.hpp  user_settings.hpp
source/: analysis.cpp  analysis1.cpp  analysis2.cpp  database.cpp  generation.cpp  main.cpp  printing.cpp  printing1.cpp  printing2.cpp  random.cpp  scoring.cpp
src/: Makefile.am  analysis.cpp  analysis2.hpp  database.cpp  generation.cpp  main.cpp  my_random.cpp  printing.cpp  printing1.cpp  printing2.hpp  random.cpp  scoring.cpp  scoring.hpp  settings.cpp  user_settings.hpp
submodules/bits-and-bytes/stats/: stats.hpp
